--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,12 @@ body {
 .js .front #main #content {
   display: none;
 }
+#main #no-interaction {
+  position: absolute;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+}
 #stream-wrapper {
   cursor: none;
 }
@@ -364,6 +370,24 @@ body {
   transition: all 10s linear;
   background-color: #d8d8d8;
   opacity: 0.9;
+}
+#stream-wrapper .site-name {
+  width: 340px;
+  height: 62.25px;
+  background-color: #00c624;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 2.4;
+}
+.random-mode #stream-wrapper .site-name {
+  background-color: #00c624;
+}
+.program-mode #stream-wrapper .site-name {
+  background-color: #a31705;
 }
 #stream-wrapper .thema > * {
   margin: 0;
@@ -482,6 +506,7 @@ body {
 }
 #stream-wrapper .thema .voisin.audio {
   height: 0;
+  overflow: hidden;
 }
 #stream-wrapper .thema .voisin.video {
   width: 680px;
