--- a/less/styles.less
+++ b/less/styles.less
@@ -70,6 +70,12 @@ body{
   #content{
     .js .front &{display:none;}
   }
+
+  #no-interaction{
+    position:absolute;
+    z-index:999;
+    width:100%; height:100%;
+  }
 } 
 
 #stream-wrapper{
@@ -103,6 +109,15 @@ body{
       background-color: @postanime-grey;
       opacity:@postanime-opacity;
     }
+  }
+
+  .site-name{
+    // z-index:100;
+    width:@cell_w; height:@line_h;
+    .bgcolored; color:#fff;
+    text-align: center; vertical-align: middle; 
+    .500; text-transform: uppercase;
+    .24; line-height:2.4; 
   }
 
   .thema{
@@ -195,7 +210,7 @@ body{
 
     .voisin{
       &.audio{
-        height:0;
+        height:0; overflow:hidden;
       }
       &.video{
         width:@cell_w*2; height:@cell_h*2;
