--- a/css/styles.css
+++ b/css/styles.css
@@ -599,7 +599,13 @@ body {
   -o-transition: all 12s linear;
   transition: all 12s linear;
   visibility: visible;
-  opacity: 0.2;
+}
+.post-anime.voisin-media-12 {
+  -webkit-transition: all 3s linear;
+  -moz-transition: all 3s linear;
+  -o-transition: all 3s linear;
+  transition: all 3s linear;
+  opacity: 0;
 }
 #footer {
   z-index: 20;
