adapt cell_h to fit with videos formats

--- a/less/styles.less
+++ b/less/styles.less
@@ -19,7 +19,7 @@ body.no-sidebars #center { width: 100%; }
 #sidebar-second { width: 18%; }
 
 @cell_w : 340px;
-@cell_h : 249px;
+@cell_h : 255px; //249px;
 @line_h : @cell_h/4;
 
 @rouge:#A31705;
