--- a/less/styles.less
+++ b/less/styles.less
@@ -199,7 +199,18 @@ section#content {
 }
 
 #stream-wrapper {
+  position: absolute;
+  top: 0; left: 0; right: 0;
+
   .field-item img { background-color: @gray-lighter; display: block; width: 50%; height: auto; }
+
+  .thema {
+    position: absolute;
+    top: 0; left: 0; right: 0;
+    background-color: white;
+    // border: 3px solid red; background-color: rgba(255, 200, 200, 0.7);
+  }
+
 }
 
 #bord-time {
@@ -210,6 +221,7 @@ section#content {
     height: 100%; padding: 0 !important;
     width: 4%;
     float: left;
+    body.program-mode & { background-color: @brand-danger; }
   }
   .bord-time-right {
     .pull-right;
