--- a/less/styles.less
+++ b/less/styles.less
@@ -62,6 +62,8 @@ section#content {
 
 *, *:focus { outline: none !important; }
 
+html, body, body > .container { height: 100%; position: relative; }
+
 header#header {
 
   margin-bottom: @grid-gutter-width;
@@ -108,7 +110,7 @@ nav#breadcrumb {
 
 section#content {
 
-  position: relative; z-index: 0;
+  // position: relative; z-index: 0;
   margin-bottom:4*@grid-gutter-width;
 
   > .row {
@@ -199,16 +201,59 @@ section#content {
 }
 
 #stream-wrapper {
-  position: absolute;
-  top: 0; left: 0; right: 0;
+  // position: absolute;
+  // top: 0; left: 0; right: 0;
 
   .field-item img { background-color: @gray-lighter; display: block; width: 50%; height: auto; }
 
   .thema {
-    position: absolute;
-    top: 0; left: 0; right: 0;
-    background-color: white;
+    // position: absolute;
+    // top: 0; left: 0; right: 0; bottom:0;
+    // background-color: white;
     // border: 3px solid red; background-color: rgba(255, 200, 200, 0.7);
+
+    .node {
+      // position: absolute;
+      // bottom: 0; left: 0; right: 0;
+    }
+
+    .node-thematique {
+      iframe { max-width: 100%; }
+      .field-type-video-embed-field {
+        .embed-responsive; .embed-responsive-16by9;
+        .field-items {
+          .embed-responsive-item;
+        }
+      }
+      img { width: 100%; height: 100%; }
+    }
+
+    .node-voisin {
+      overflow: hidden;
+      iframe { max-width: 100%; }
+
+      &.view-mode-voisin_video_t1_16_9,
+      &.view-mode-voisin_video_t2_16_9,
+      &.view-mode-voisin_video_t3_16_9 {
+        .field-type-video-embed-field {
+          .embed-responsive; .embed-responsive-16by9;
+          .field-items {
+            .embed-responsive-item;
+          }
+        }
+      }
+
+      &.view-mode-voisin_video_t1_4_3,
+      &.view-mode-voisin_video_t2_4_3,
+      &.view-mode-voisin_video_t3_4_3 {
+        .field-type-video-embed-field {
+          .embed-responsive; .embed-responsive-4by3;
+          .field-items {
+            .embed-responsive-item;
+          }
+        }
+      }
+    }
   }
 
 }
