--- a/less/styles.less
+++ b/less/styles.less
@@ -44,7 +44,7 @@ nav#breadcrumb {
   }
 }
 
-section#content {
+section#main {
 
   > .row {
 
@@ -113,7 +113,7 @@ nav#breadcrumb {
   }
 }
 
-section#content {
+section#main {
 
   // position: relative; z-index: 0;
   margin-bottom:4*@grid-gutter-width;
@@ -203,6 +203,14 @@ section#content {
 
   }
 
+}
+
+body.random-mode,
+body.program-mode {
+  section#main {
+    & > .page-title,
+    & > .node-page { display: none; }
+  }
 }
 
 #stream-wrapper {
