--- a/less/styles.less
+++ b/less/styles.less
@@ -216,7 +216,7 @@ body.program-mode {
 #stream-wrapper {
 
   position: relative;
-  // z-index: -1;
+  z-index: -1;
 
   .field-item
     img { background-color: @gray-lighter; display: block; width: 50%; height: auto; }
